# Collection-Catalog

./: .gitignore  Cargo.toml  LICENSE  README.md  catalog.db
collection-catalog-cli/: Cargo.toml
collection-catalog-cli/src/: main.rs
collection-catalog-core/: Cargo.toml
collection-catalog-core/src/: csv_export.rs  db.rs  lib.rs  main.rs  models.rs
collection-catalog-tauri/: Cargo.toml
collection-catalog-tauri/src-tauri/: Cargo.toml  tauri.conf.json
collection-catalog-ui/src/: add-item.html  add-item.js  filter.html  filter.js  find-by-id.html  index.html  item.html  item.js  main.js  styles.css
collection-catalog-ui/src-tauri/: Cargo.toml  tauri.conf.json
collection-catalog-ui/src-tauri/src/: lib.rs  main.rs
src/: csv_export.rs  db.rs  main.rs  models.rs
tests/: db_tests.rs  models_tests.rs
